--- a/src/template.html
+++ b/src/template.html
@@ -5,8 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
   </head>
   <body>
-    <h1>Hurray!!!</h1>
+    <header class="head">
+      <div class="logo">To-<span>Do</span> App</div>
+      <p class="logo-text">Where thinking gets done!</p>
+    </header>
+    <section class="dock">
+      <div class="container">
+        <div class="lead">
+          <h1>Got plans to accomplish anything today?</h1>
+          <i class="fa-solid fa-arrows-rotate"></i>
+        </div>
+        <div class="main-cta">
+          <!-- Form for user's input -->
+          <form action="#" method="#" class="app">
+            <input type="text" name="task" id="task" placeholder="Add to your list..." required>
+            <i class="fa fa-arrow-turn-down"></i>
+          </form>
+
+          <div class="ads">
+            <p class="copy">An app that helps you achieve more even when you don't have time!</p>
+            <button type="button">Try it today</button>
+          </div>
+        </div>
+
+        <ul class="to-do">
+          <!-- Dynamic Content -->
+        </ul>
+      </div>
+    </section>
+
   </body>
 </html>
