--- a/src/template.html
+++ b/src/template.html
@@ -1,48 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    />
-  </head>
-  <body>
-    <header class="head">
-      <div class="logo">To-<span>Do</span> App</div>
-      <p class="logo-text">Where thinking gets done!</p>
-    </header>
-    <section class="dock">
-      <div class="container">
-        <div class="grp-tab">
+    <title>To-Do App</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous">
+</head>
+<body>
+    <div class="clipboard animate__animated animate__rotateIn animate__delay-1s">
+        <img src="assets/images/clipboard.png" alt="" width="60" height="60">
+    </div>
 
-          <div class="lead">
-            <h1>Today's To-Do</h1>
-            <i class="fa-solid fa-arrows-rotate"></i>
-          </div>
-          <div class="main-cta">
-
-            <!-- Form for user's input -->
-            <form action="#" method="#" class="app">
-              <div class="bind-icon">
-                <input type="text" class="task addUp" placeholder="Add to your list..." required>
-                <button type="submit">
-                  <i class="fa fa-arrow-turn-down"></i>
-                </button> 
-              </div>
+    <div class="to-do-Section animate__animated animate__zoomInDown">
+        <div id="to-do-container" class="animate__animated">
+            <div class="heading">
+                <h1>Today's To Do</h1>
+                <button type="button" id="refresh-button"><img class="icon" src="./assets/images/refresh.png" alt=""></button>
+            </div>
+            <hr>
+            <form id="add-new-task">
+                <input type="text" name="new_task" placeholder="Add to your list ..." required>
+                <button type="submit"><img class="icon" src="./assets/images/add.png" alt=""></button>
             </form>
+            <ul id="tasks-list">
 
-            <ul class="task-list">
-              <!-- Dynamic Tasks -->
             </ul>
-            <button type="button" class="clear">Clear all completed</button>
-          </div>
-        </div> 
-      </div>
-    </section>
+            <hr>
+            <button type="button" id="clear-completed-button">Clear all Completed</button>
+        </div>
+    </div>
 
-  </body>
+    <div id="dropped" class="animate__animated animate__fadeIn">
+        <p>Oops you dropped it \¶-¶/</p>
+    </div>
+
+    <div id="popup" class="animate__animated animate__fast">
+        <p>This task already exists</p>
+    </div>
+</body>
 </html>
