Apply suggested changes to put <code>ul</code> on a line

--- a/src/template.html
+++ b/src/template.html
@@ -22,9 +22,7 @@
                 <input type="text" name="new_task" placeholder="Add to your list ..." required>
                 <button type="submit"><img class="icon" src="./assets/images/add.png" alt=""></button>
             </form>
-            <ul id="tasks-list">
-
-            </ul>
+            <ul id="tasks-list"></ul>
             <hr>
             <button type="button" id="clear-completed-button">Clear all Completed</button>
         </div>
